--- a/javascript/openfin-amps-demo/package.json
+++ b/javascript/openfin-amps-demo/package.json
@@ -4,16 +4,55 @@
   "description": "demoapp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run clean && webpack-dev-server -d --config webpack/webpack.config.dev.js",
+    "openfin:dev": "node openfin-launcher/dev.js",
+    "openfin:prod": "node openfin-launcher/prod.js",
+    "build": "npm run clean && webpack -p --config webpack/webpack.config.prod.js",
+    "build:deploy": "npm run build && node openfin-config/updateForDeployment.js",
+    "serve": "http-server -p 5001",
+    "prod": "npm run build && npm run serve",
+    "clean": "rimraf public/*",
+    "ci": "npm run lint && npm test && npm run build",
+    "lint": "eslint --ignore-path .gitignore -- .",
+    "lint:fix": "eslint --fix --ignore-path .gitignore -- .",
+    "test": "cross-env BABEL_ENV=test mocha --opts test/mocha.opts",
+    "test:watch": "npm test -- --watch",
+    "test:cov": "cross-env BABEL_ENV=test babel-node node_modules/isparta/bin/isparta cover --report text --report html node_modules/mocha/bin/_mocha -- --opts test/mocha.opts",
+    "remotedev": "remotedev --hostname=localhost --port=8000",
+    "release": "npm run ci && npm version"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-rewire": "^1.0.0-rc-3",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "6.26.0",
+    "babel-template": "^6.9.0",
+    "babel-types": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "BitFlux": "github:scottlogic/BitFlux#1.7.0",
     "browser-sync": "^2.23.6",
-    "gulp": "^3.9.1",
-    "openfin-launcher": "^1.4.2",
-    "socket.io-client": "^2.1.0",
-    "jquery": "~3.3.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "d3fc": "^13.1.1",
     "fin-hypergrid": "^2.1.6",
-    "d3fc": "13.1.1",
-    "require-dir": "~1.0.0"
+    "gulp": "^3.9.1",
+    "isomorphic-fetch": "^2.1.1",
+    "jquery": "~3.3.1",
+    "moment": "^2.22.0",
+    "openfin-launcher": "^1.4.2",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.1",
+    "react-hot-loader": "next",
+    "redux": "^3.7.2",
+    "require-dir": "~1.0.0",
+    "socket.io-client": "^2.1.0",
+    "throat": "^4.1.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
