--- a/javascript/openfin-amps-demo/package.json
+++ b/javascript/openfin-amps-demo/package.json
@@ -36,23 +36,41 @@
     "BitFlux": "github:scottlogic/BitFlux#1.7.0",
     "browser-sync": "^2.23.6",
     "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "d3fc": "^13.1.1",
+    "deep-freeze": "0.0.1",
+    "file-loader": "^1.1.11",
     "fin-hypergrid": "^2.1.6",
     "gulp": "^3.9.1",
     "isomorphic-fetch": "^2.1.1",
-    "jquery": "~3.3.1",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "lodash.defaults": "^4.2.0",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "moment": "^2.22.0",
     "openfin-launcher": "^1.4.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.1",
     "react-hot-loader": "next",
+    "reduce-reducers": "^0.1.2",
     "redux": "^3.7.2",
+    "redux-localstorage": "^0.4.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1",
+    "remote-redux-devtools": "^0.3.3",
     "require-dir": "~1.0.0",
+    "reselect": "^3.0.1",
     "socket.io-client": "^2.1.0",
+    "style-loader": "^0.20.3",
+    "svg-sprite-loader": "^3.7.3",
     "throat": "^4.1.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "jquery": "~3.3.1"
   }
 }
