--- a/javascript/openfin-amps-demo/package.json
+++ b/javascript/openfin-amps-demo/package.json
@@ -4,13 +4,14 @@
   "description": "demoapp",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run clean && webpack-dev-server -d --config webpack/webpack.config.dev.js",
+    "dev": "npm run clean && webpack-dev-server -d --hot --config webpack/webpack.config.dev.js --mode development",
     "openfin:dev": "node openfin-launcher/dev.js",
     "openfin:prod": "node openfin-launcher/prod.js",
     "build": "npm run clean && webpack -p --config webpack/webpack.config.prod.js",
     "build:deploy": "npm run build && node openfin-config/updateForDeployment.js",
     "serve": "http-server -p 5001",
     "prod": "npm run build && npm run serve",
+    "postinstall": "cd node_modules/BitFlux && npm i && grunt build:module",
     "clean": "rimraf public/*",
     "ci": "npm run lint && npm test && npm run build",
     "lint": "eslint --ignore-path .gitignore -- .",
@@ -36,31 +37,42 @@
     "BitFlux": "github:scottlogic/BitFlux#1.7.0",
     "browser-sync": "^2.23.6",
     "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "d3fc": "^13.1.1",
     "deep-freeze": "0.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "fin-hypergrid": "^2.1.6",
     "gulp": "^3.9.1",
+    "http-server": "^0.11.1",
     "isomorphic-fetch": "^2.1.1",
+    "json-loader": "^0.5.7",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "lodash.defaults": "^4.2.0",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
     "moment": "^2.22.0",
     "openfin-launcher": "^1.4.2",
+    "prop-types": "15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.1",
-    "react-hot-loader": "next",
+    "react-hot-loader": "4.0.1",
     "reduce-reducers": "^0.1.2",
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1",
     "remote-redux-devtools": "^0.3.3",
+    "remotedev-server": "^0.2.4",
     "require-dir": "~1.0.0",
     "reselect": "^3.0.1",
+    "script-loader": "0.7.2",
     "socket.io-client": "^2.1.0",
     "style-loader": "^0.20.3",
     "svg-sprite-loader": "^3.7.3",
@@ -71,6 +83,7 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "jquery": "~3.3.1"
+    "jquery": "~3.3.1",
+    "classnames": "^2.2.3"
   }
 }
